opensesame (3.0.6a1-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix a crash when adding an empty list to the file pool
    - Handle exotic variable types better in variable inspector (#388)
    - Fix initial state of auto_example plug-in (#389)
    - Catch errors in file pool
  * Improvements
    - Add `experiment_file` experimental variable, which contains the file name of the experiment (#387)
    - Catch warnings when creating a new item and provide an informative message
    - Update default logfile location after save as (#370)
    - Improve file-type icons in file pool
    - Add deprecation warning to parallel plugin (use coroutines instead)
    - Allow external links in user hints

 -- Sebastiaan Mathot <sebastiaan@mantis>  Thu, 21 Jan 2016 20:55:07 +0100

opensesame (3.0.5-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix catching of unexpected errors in multiprocess runner (#382)
    - Don't crash when entering numeric break-if statement in loop
    - Register 'self' when executing conditional statements (for backwards compatibility)
    - Fix missing py3compat import in joystick
    - Fix keyboard timestamps for older versions of PsychoPy (#381)
    - Show .osexp files while browsing with opensesamerun GUI (#385)
    - Fix rectangular envelope in noise patches
    - Fix too-many-files-open error with gabor and noise elements in sketchpad
    - Remove Python-3-incompatible relative imports from plugin_manager
  * Improvements
    - Add unit test for required py3compat import and encoding declaration
    - Show version info in opensesamerun GUI
    - Improve Python 3 compatibility

 -- Sebastiaan Mathot <sebastiaan@mantis>  Tue, 01 Dec 2015 17:15:57 +0100

opensesame (3.0.4-ubuntu1) wily; urgency=medium

  * Bugs fixed
    - Fix regression where sketchpad didn't use the file pool

 -- Sebastiaan Mathot <sebastiaan@mantis>  Sat, 28 Nov 2015 20:25:08 +0100

opensesame (3.0.3-ubuntu1) wily; urgency=medium

  * Bugs fixed