@@ -5,6 +5,7 @@ opensesame (3.0.6a1-ubuntu1) wily; urgency=medium
     - Handle exotic variable types better in variable inspector (#388)
     - Fix initial state of auto_example plug-in (#389)
     - Catch errors in file pool
+    - Fix background-color changes with psycho backend
   * Improvements
     - Add `experiment_file` experimental variable, which contains the file name of the experiment (#387)
     - Catch warnings when creating a new item and provide an informative message
